projeto-livros-master-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projeto-livros-master
  labels:
    app: projeto-livros
spec:
  selector:
    matchLabels:
      app: projeto-livros
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: projeto-livros
        role: master
        tier: backend
    spec:
      containers:
      - name: master
        image: k8s.gcr.io/redis:e2e
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
