projeto-livros-slave-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projeto-livros-slave
  labels:
    app: projeto-livros
spec:
  selector:
    matchLabels:
      app: projeto-livros
      role: slave
      tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: projeto-livros
        role: slave
        tier: backend
    spec:
      containers:
      - name: slave
        image: gcr.io/google_samples/gb-projeto-livrosslave:v3
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
