redis-replica-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-replica
  namespace: livros
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: replica
    app.kubernetes.io/part-of: app-livros
    app.kubernetes.io/version: "7.2"
spec:
  selector:
    matchLabels:
      app: livros
      role: replica
      tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: livros
        role: replica
        tier: backend
    spec:
      containers:
      - name: redis
        image: redis:7.2-alpine
        command: ["redis-server", "--replicaof", "redis-primary", "6379"]
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        ports:
        - containerPort: 6379
          name: redis
        livenessProbe:
          tcpSocket:
            port: redis
          initialDelaySeconds: 15
          periodSeconds: 20
          failureThreshold: 3
        readinessProbe:
          exec:
            command: ["redis-cli", "ping"]
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
