frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: livros
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: app-livros
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: livros
    tier: frontend
