projeto-livros-master-service.yml
apiVersion: v1
kind: Service
metadata:
  name: projeto-livros-master
  labels:
    app: projeto-livros
    role: master
    tier: backend
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: projeto-livros
    role: master
    tier: backend
