projeto-livros-slave-service.yml
apiVersion: v1
kind: Service
metadata:
  name: projeto-livros-slave
  labels:
    app: projeto-livros
    role: slave
    tier: backend
spec:
  ports:
  - port: 6379
  selector:
    app: projeto-livros
    role: slave
    tier: backend
