redis-primary-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-primary
  namespace: livros
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: primary
    app.kubernetes.io/part-of: app-livros
spec:
  ports:
  - port: 6379
    targetPort: 6379
    name: redis
  selector:
    app: livros
    role: primary
    tier: backend
