network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-allow-frontend
  namespace: livros
  labels:
    app.kubernetes.io/part-of: app-livros
spec:
  podSelector:
    matchLabels:
      tier: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          tier: frontend
    ports:
    - protocol: TCP
      port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-allow-replication
  namespace: livros
  labels:
    app.kubernetes.io/part-of: app-livros
spec:
  podSelector:
    matchLabels:
      role: replica
      tier: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: primary
          tier: backend
    ports:
    - protocol: TCP
      port: 6379
